# MiniTikTok-User

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yaml
User/: Cargo.toml  build.rs
User/src/: combind_incoming.rs  health_check.rs  lib.rs  main.rs  proto.rs  user_service.rs
manifests-dev/: configmap.yaml  deployment.yaml  service-minitiktok-user-grpc.yaml  service.yaml
