[package]
name = "mini_tiktok_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0", default-features = false, features = ["auto-color", "color", "humantime"] }
futures-core = { version = "0", default-features = false }
log = { version = "0", default-features = false }
prost = { version = "0", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tokio-postgres = { version = "0", default-features = false, features = ["runtime"] }
tonic = { version = "0", default-features = false, features = ["transport", "codegen", "prost"] }

[build-dependencies]
tonic-build = "0"
